<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".newMeasurementActivity">

    <TextView
        android:id="@+id/infoMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/infoMeasurement"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="27dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/isHungry"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:layout_marginTop="130dp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/date"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isHungry" />

    <EditText
        android:id="@+id/varMeasurement"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/varMeasurement"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/note"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/note"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/varMeasurement" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_send"
        android:text="@string/next"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttondesing2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note" />

</androidx.constraintlayout.widget.ConstraintLayout>