<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".selectMenuActivity">

    <Button
        android:id="@+id/userPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttondesing2"
        android:drawableStart="@android:drawable/star_big_on"
        android:text="@string/profile"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="160dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEntry"
        android:drawableStart="@android:drawable/star_big_on"
        android:layout_marginTop="16dp"
        android:textColor="#000"
        android:background="@drawable/buttondesing2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPage" />


    <Button
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:layout_marginTop="16dp"
        android:drawableStart="@android:drawable/star_big_on"
        android:textColor="#000"
        android:background="@drawable/buttondesing2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEntry" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:background="@drawable/iconhome"/>

</androidx.constraintlayout.widget.ConstraintLayout>